2021-02-14  Jay Berkenbilt  <ejb@ql.org>

	* Add new versions of QPDFObjectHandle::replaceStreamData that
	take std::function objects for cases when you need something
	between a static string and a full-fledged StreamDataProvider.
	Using this with QUtil::file_provider is a very easy way to create
	a stream from the contents of a file.

2021-02-12  Jay Berkenbilt  <ejb@ql.org>

	* Move formerly internal QPDFMatrix class to the public API. This
	class provides convenience methods for working with transformation
	matrices.

	* QUtil::double_to_string: trim trailing zeroes by default, and
	add option to not trim trailing zeroes. This causes a syntactic
	but semantically preserving change in output when doubles are
	converted to strings. The library uses double_to_string in only a
	few places. In practice, output will be different (trailing zeroes
	removed) in code that creates form XObjects (mostly generation of
	appearance streams for form fields as well as overlay and
	underlay) and in the flatten rotation code that was added in qpdf
	10.1.

2021-02-10  Jay Berkenbilt  <ejb@ql.org>

	* Require a C++-14 compiler.

	* Detect loops when adding when reading outlines dictionary upon
	initialization of QPDFOutlineDocumentHelper (fuzz issue 30507).

	* Add "attachments" as an additional json key, and add some
	information about attachments to the json output.

	* Add new command-line arguments for operating on attachments:
	--list-attachments, --add-attachment, --remove-attachment,
	--copy-attachments-from. See --help and manual for details.

2021-02-09  Jay Berkenbilt  <ejb@ql.org>

	* Add methods to QUtil for working with PDF timestamp strings:
	pdf_time_to_qpdf_time, qpdf_time_to_pdf_time,
	get_current_qpdf_time.

2021-02-08  Jay Berkenbilt  <ejb@ql.org>

	* Add helper classes for file attachments:
	QPDFEmbeddedFileDocumentHelper, QPDFFileSpecObjectHelper,
	QPDFEFStreamObjectHelper. See their header files for details.

2021-02-07  Jay Berkenbilt  <ejb@ql.org>
