@@ -1,3 +1,9 @@
+2021-02-15  Jay Berkenbilt  <ejb@ql.org>
+
+	* Add a version of QPDFObjectHandle::parse that takes a QPDF* as
+	context so that it can parse strings containing indirect object
+	references.
+
 2021-02-14  Jay Berkenbilt  <ejb@ql.org>
 
 	* Add new versions of QPDFObjectHandle::replaceStreamData that
